adding scss bundling and npm start

--- a/bundle.css
+++ b/bundle.css
@@ -1,174 +1,155 @@
-body {
-    font-family: monospace;
-}
-
-flow-step {
-    display: none;
-}
-flow-step.active {
-    display: block;
-}
-
-aside {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 140px;
-    padding: 40px 10px;
-    box-sizing: border-box;
-}
-
-main {
-    position: relative;
-    padding-left: 40px;
-    margin-top: 40px;
-    margin-left: 150px;
-    margin-bottom: 40px;
-}
-
-.center {
-    text-align: center;
-}
-
-user-search img {
-    width: 120px;
-    border-radius: 10px;
-}
-
-#search-query {
-    width: 100px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-    border-bottom-right-radius: 10px;
-    font-size: 16px;
-    font-family: monospace;
-}
-
-#search-query:focus {
-    outline:0;
-}
-
-user-list {
-    display: block;
-    margin-top: 10px;
-}
-
 user-list user-item {
-    float:left;
-    width: 200px;
-    cursor: pointer;
-    display: block;
-    padding: 10px;
-    border: 1px solid transparent;
-}
+  float: left;
+  width: 200px;
+  cursor: pointer;
+  display: block;
+  padding: 10px;
+  border: 1px solid transparent; }
 
 user-list user-item:hover {
-    border: 1px solid #999;
-    background-color: #dedede;
-    border-radius: 10px;
-}
+  border: 1px solid #999;
+  background-color: #dedede;
+  border-radius: 10px; }
 
 user-list user-item .avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-    margin-right: 10px;
-}
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 10px; }
 
 user-list user-item:hover .avatar {
-    width: 50px;
-    height: 50px;
-    margin: -5px;
-    margin-right: 10px;
-}
+  width: 50px;
+  height: 50px;
+  margin: -5px;
+  margin-right: 10px; }
 
 user-list user-item login {
-    font-size: 16px;
-    vertical-align: 15px;
-}
+  font-size: 16px;
+  vertical-align: 15px; }
+user-search img {
+  width: 120px;
+  border-radius: 10px; }
 
+#search-query {
+  width: 100px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  border-bottom-right-radius: 10px;
+  font-size: 16px;
+  font-family: monospace; }
+
+#search-query:focus {
+  outline: 0; }
+
+user-list {
+  display: block;
+  margin-top: 10px; }
 user-badge {
-    cursor: pointer;
-}
+  cursor: pointer; }
 
 user-badge .back-link:hover {
-    background-image: url('bin/arrow-back.png');
-}
+  background-image: url("/bin/arrow-back.png"); }
 
 user-badge img {
-    border-radius: 10px;
-    width: 120px;
-}
+  border-radius: 10px;
+  width: 120px; }
+
 user-badge img:hover {
-    opacity: 0.2;
-}
+  opacity: 0.2; }
 
 user-badge user-name {
-    display: block;
-    text-align: center;
-    font-size: 18px;
-}
-
-repository-list {
-    display: block;
-}
-repository-list.loading {
-    background-image: url('bin/octocat-spinner.gif');
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 300px;
-}
-
+  display: block;
+  text-align: center;
+  font-size: 18px; }
 repository-item {
-    cursor: pointer;
-    display: block;
-    border: 1px solid #dedede;
-    padding: 10px;
-    border-radius: 10px;
-    float: left;
-    width: 240px;
-    box-sizing: border-box;
-    margin: 0 10px 10px 0;
-    overflow: hidden;
-    position: relative;
-}
+  cursor: pointer;
+  display: block;
+  border: 1px solid #dedede;
+  padding: 10px;
+  border-radius: 10px;
+  float: left;
+  width: 240px;
+  box-sizing: border-box;
+  margin: 0 10px 10px 0;
+  overflow: hidden;
+  position: relative; }
 
 repository-item.forked {
-    border: 1px solid #ccc;
-    background: #dedede;
-}
+  border: 1px solid #ccc;
+  background: #dedede; }
+
 repository-item.forked fork {
-    display: inline-block;
-    position: absolute;
-    right: 5px;
-    bottom: 5px;
-    width: 32px;
-    height: 32px;
-    background: url('bin/fork.png');
-    background-size: contain;
-}
+  display: inline-block;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  width: 32px;
+  height: 32px;
+  background: url("/bin/fork.png");
+  background-size: contain; }
+
 repository-item:hover {
-    border-color: black;
-}
+  border-color: black; }
 
 repository-item p {
-    font-size: 12px;
-    overflow: hidden;
-    display: block;
-    height: 30px;
-}
+  font-size: 12px;
+  overflow: hidden;
+  display: block;
+  height: 30px; }
+repository-list {
+  display: block; }
+
+repository-list.loading {
+  background-image: url("/bin/octocat-spinner.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px; }
+body {
+  font-family: monospace; }
+
+flow-step {
+  display: none; }
+
+flow-step.active {
+  display: block; }
+
+aside {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 140px;
+  padding: 40px 10px;
+  box-sizing: border-box; }
+
+main {
+  position: relative;
+  padding-left: 40px;
+  margin-top: 40px;
+  margin-left: 150px;
+  margin-bottom: 40px; }
 
 language {
-    color: white;
-    display: inline-block;
-    padding: 4px;
-    background: #999;
-    border-radius: 5px;
-}
-language.javascript { background: coral; }
-language.java, language.scala { background: red; }
-language.html { background: orange; }
-language.python, language.php, language.lua { background: navy; }
-language.cpp, language.c { background: black; }
-language.typescript, language.coffeescript, language.groovy { background: magenta; }
+  color: white;
+  display: inline-block;
+  padding: 4px;
+  background: #999;
+  border-radius: 5px; }
+
+language.javascript {
+  background: coral; }
+
+language.java, language.scala {
+  background: red; }
+
+language.html {
+  background: orange; }
+
+language.python, language.php, language.lua {
+  background: navy; }
+
+language.cpp, language.c {
+  background: black; }
+
+language.typescript, language.coffeescript, language.groovy {
+  background: magenta; }
