add paginated-list component

--- a/src/components/ui/user-search/user-search.html
+++ b/src/components/ui/user-search/user-search.html
@@ -2,6 +2,4 @@
     <img src="bin/unknown.jpg"/>
     <big>@</big><input type="text" id="search-query" />
 </aside>
-<main>
-    <user-list></user-list>
-</main>
+<main></main>
