--- a/src/components/ui/user-search/user-search.html
+++ b/src/components/ui/user-search/user-search.html
@@ -1,5 +1,4 @@
-<aside>
-    <img src="bin/unknown.jpg"/>
-    <big>@</big><input type="text" id="search-query" />
-</aside>
-<main></main>
+<user-search>
+  <img src="bin/unknown.jpg"/>
+  <big>@</big><input type="text" id="search-query" />
+</user-search>
